K8s/base/postgres/postgres-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-headless
  labels:
    app: postgresql
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  clusterIP: None
  selector:
    app: postgresql
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
